[gd_scene load_steps=15 format=3 uid="uid://bjfihtm5t424l"]

[ext_resource type="Script" path="res://models/toydrum/button.gd" id="1_3a06k"]
[ext_resource type="Script" path="res://models/shared/nob_model.gd" id="2_c5q1x"]
[ext_resource type="ArrayMesh" uid="uid://bbng7t7okc6ad" path="res://models/shared/button_keyboard_long.res" id="3_na7yp"]
[ext_resource type="Material" uid="uid://c7ewiicv8488q" path="res://models/shared/nobs/keyboard_key_material_good.tres" id="3_v3koy"]
[ext_resource type="AudioStream" uid="uid://bmkr5qf551e58" path="res://models/shared/sounds/key_press_0.wav" id="4_v73w6"]
[ext_resource type="Script" path="res://models/toydrum/buttonm.gd" id="5_ianib"]
[ext_resource type="AudioStream" uid="uid://bgxedw1j0conq" path="res://models/shared/sounds/key_press_1.wav" id="5_wy74t"]
[ext_resource type="AudioStream" uid="uid://bxoki7ft7c3na" path="res://models/shared/sounds/key_press_loud_1.wav" id="6_02xft"]
[ext_resource type="AudioStream" uid="uid://c3p1l42revws3" path="res://models/shared/sounds/key_press_loud_0.wav" id="7_u8r1m"]
[ext_resource type="AudioStream" uid="uid://dh5tiwpnwbg3a" path="res://models/shared/sounds/key_press_loud_2.wav" id="8_vnh2c"]
[ext_resource type="Material" uid="uid://dtnc8e2uktfb5" path="res://models/redux/black_void_material.tres" id="11_ooxoj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fygew"]
size = Vector3(0.0165, 0.0195, 0.0385)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2uwsy"]
streams_count = 5
stream_0/stream = ExtResource("4_v73w6")
stream_1/stream = ExtResource("5_wy74t")
stream_2/stream = ExtResource("6_02xft")
stream_3/stream = ExtResource("7_u8r1m")
stream_4/stream = ExtResource("8_vnh2c")

[sub_resource type="Curve3D" id="Curve3D_p6xlr"]
bake_interval = 0.01
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0.1, 0, 0, 0, 0, 0, 0, 0, 0, 0.0025, 0),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[node name="Button" type="Node3D"]
script = ExtResource("1_3a06k")

[node name="Nob" type="Area3D" parent="."]
collision_layer = 9

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Nob"]
shape = SubResource("BoxShape3D_fygew")

[node name="Model" type="Node3D" parent="Nob"]
script = ExtResource("2_c5q1x")

[node name="Button" type="MeshInstance3D" parent="Nob/Model"]
unique_name_in_owner = true
material_override = ExtResource("3_v3koy")
instance_shader_parameters/albedo = Color(0, 0, 0, 1)
mesh = ExtResource("3_na7yp")
script = ExtResource("5_ianib")

[node name="Sound" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_2uwsy")

[node name="Button2" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-1.05, 1.50996e-07, 0, -1.58546e-07, -1, 0, 0, 0, 1.05, 0, 0, 0)
material_override = ExtResource("11_ooxoj")
mesh = ExtResource("3_na7yp")
skeleton = NodePath("../Nob/Model")

[node name="Top" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00224168, 0)

[node name="Path" type="Path3D" parent="."]
curve = SubResource("Curve3D_p6xlr")

[node name="PathFollow" type="PathFollow3D" parent="Path"]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 0, 0.0025, 0)
progress = 0.0975
loop = false

[node name="RemoteTransform" type="RemoteTransform3D" parent="Path/PathFollow"]
update_scale = false

[connection signal="mouse_entered" from="Nob" to="." method="_mouse_entered"]
[connection signal="mouse_exited" from="Nob" to="." method="_mouse_exited"]
